# kgm-unlock-lib

./: .gitignore  CMakeLists.txt  License  README.md
include/: kgm.hpp
src/: kgm.cpp
test/: decrypt.cpp
